dark mode fixed

--- a/asror/styles.css
+++ b/asror/styles.css
@@ -180,30 +180,7 @@ img {
     cursor: pointer;
 }
 
-/* .language-selector:after, .currency-selector:after {
-    content: '';
-    display: inline-block;
-    width: 0;
-    height: 0;
-    /* margin-left: 7px;
-    vertical-align: middle;
-    border-top: 4px solid;
-    border-right: 4px solid transparent;
-    border-left: 4px solid transparent; 
-} */
-/* 
-.main-header {
-    padding: 15px 0;
-    background-color: var(--bg-color);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
-    position: sticky;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    transition: all 0.3s ease;
 
-
-} */
 
 .main-header {
     padding: 15px 0;
@@ -216,12 +193,8 @@ img {
     transition: all 0.3s ease;
 }
 
-/* Parent elementlar overflow bilan muammo bo'lishi mumkin */
-body, html {
-    overflow-x: hidden; /* Gorizontal scroll bo'lmasligi uchun */
-}
 
-/* Header konteynerining максимал balandligi belgilanmagan bo'lsa */
+
 .header-content {
     display: flex;
     align-items: center;
@@ -261,7 +234,7 @@ body, html {
     position: relative;
 }
 
-.nav-link:after {
+/* .nav-link:after {
     content: '';
     position: absolute;
     bottom: -2px;
@@ -270,8 +243,8 @@ body, html {
     height: 2px;
     background-color: var(--primary-color);
     transition: width 0.3s ease;
-}
-
+} */
+/* 
 .nav-link:hover:after,
 .nav-link.active:after {
     width: 100%;
@@ -289,7 +262,7 @@ body, html {
     border-right: 4px solid white;
     border-left: 4px solid white;
     position: static;
-}
+} */
 
 .header-actions {
     display: flex;
